--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Prixima BS5 Template</title>
+    <title>IDEM</title>
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="70">
@@ -274,7 +274,7 @@
                         <p>Lot IVA 112 Betafo Ambohimanarina 101 Antananarivo</p>
                         <p>Tel : +261 32 78 771 22</p>
                         <p>Email : <a style="color: rgb(138, 88, 70);" href="idem.mada007@gmail.com">idem.mada007@gmail.com</a></p>
-                        <p>Site : <a style="color: rgb(138, 88, 70);" href="www.idem.com">www.idem.com</a></p>
+                        <p>Site : <a style="color: rgb(138, 88, 70);" href="idexpertmada.netlify.app">idexpertmada.netlify.app</a></p>
                     </div>
                 </div>
             </div>
